--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 transformers==4.31.0
 torch==2.0.1
-accelerate==0.21.0
+accelerate==0.23.0
 einops==0.6.1
+bitsandbytes==0.41.1
+scipy==1.11.2
+peft==0.5.0
 uvicorn==0.23.1
 fastapi==0.100.0
